# LastWeekTomorrow

./: .gitignore  EXAMPLE_IARXIV.eml  LLM_SETUP_HANDOFF.md  PLAN.md  README.md  notebook_note.txt  pyproject.toml
src/daily_podcast/: __init__.py  cli.py  config.py  downloader.py  email_parser.py  gmail_client.py  models.py  notebooklm.py  state.py
src/daily_podcast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_downloader.py  test_email_parser.py  test_local_eml_manifest.py  test_manifest_merge.py  test_notebook_prompt_wiring.py  test_path_resolution.py  test_tracking_safe_parsing.py
